--- a/project/index.html
+++ b/project/index.html
@@ -268,7 +268,7 @@
 
 
 
-  <meta name="author" content="Alice Wu 吳恩達" />
+  <meta name="author" content="Sebastian Lopez" />
 
 
 
@@ -850,6 +850,16 @@
   
   
 
+
+<p class="powered-by">
+  
+  <a href="/privacy/">Privacy Policy</a>
+  
+  
+   &middot; 
+  <a href="/terms/">Terms</a>
+  
+</p>
 
 
 
