--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -268,7 +268,7 @@
 
 
 
-  <meta name="author" content="Alice Wu 吳恩達" />
+  <meta name="author" content="Sebastian Lopez" />
 
 
 
@@ -693,7 +693,7 @@
         
 
   <span class="author-highlighted">
-      Alice Wu 吳恩達</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
+      Sebastian Lopez</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
       Robert Ford</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>
       </div>
       
@@ -831,6 +831,16 @@
   
   
 
+
+<p class="powered-by">
+  
+  <a href="/privacy/">Privacy Policy</a>
+  
+  
+   &middot; 
+  <a href="/terms/">Terms</a>
+  
+</p>
 
 
 
