--- a/publication-type/3/index.html
+++ b/publication-type/3/index.html
@@ -268,7 +268,7 @@
 
 
 
-  <meta name="author" content="Alice Wu 吳恩達" />
+  <meta name="author" content="Sebastian Lopez" />
 
 
 
@@ -693,7 +693,7 @@
         
 
   <span class="author-highlighted">
-      Alice Wu 吳恩達</span>
+      Sebastian Lopez</span>
       </div>
       
     </div>
@@ -847,6 +847,16 @@
   
   
 
+
+<p class="powered-by">
+  
+  <a href="/privacy/">Privacy Policy</a>
+  
+  
+   &middot; 
+  <a href="/terms/">Terms</a>
+  
+</p>
 
 
 
