--- a/slides/example/index.html
+++ b/slides/example/index.html
@@ -21,7 +21,7 @@
 
   <link rel="canonical" href="https://sebas2031.github.io/slides/example/">
 
-  <title>Slides | Academic</title>
+  <title>Slides | Sebastian Lopez</title>
 
   
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4.3.1/dist/reveal.min.css"><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4.3.1/dist/theme/black.min.css">
